--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
     <title>World Clock Project</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select name="" id="">
+        <option value="">Select a City...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Tokyo</option>
+      </select>
+
+      <div class="city">
+        <h2>Los Angeles</h2>
+        <div class="date">April 27th 2024</div>
+        <div class="time">5:49 PM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">April 27th 2024</div>
+        <div class="time">5:49 PM</div>
+      </div>
+    </div>
     <footer>
       Coded by Olessya Oporta & is open-sourced on
       <a href="https://github.com/OlessyaOG/World-Clock-Project" target="_blank"
