--- a/index.html
+++ b/index.html
@@ -20,18 +20,23 @@
       </select>
 
       <div class="city">
-        <h2>Los Angeles</h2>
-        <div class="date">April 27th 2024</div>
-        <div class="time">5:49 PM</div>
+        <div>
+          <h2>Los Angeles</h2>
+          <div class="date">April 27th 2024</div>
+        </div>
+        <div class="time">5:49 <small>PM</small></div>
       </div>
       <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">April 27th 2024</div>
-        <div class="time">5:49 PM</div>
+        <div>
+          <h2>Tokyo</h2>
+          <div class="date">April 27th 2024</div>
+        </div>
+        <div class="time">5:49 <small>PM</small></div>
       </div>
     </div>
+
     <footer>
-      Coded by Olessya Oporta & is open-sourced on
+      Coded by <strong>Olessya Oporta</strong> & is open-sourced on
       <a href="https://github.com/OlessyaOG/World-Clock-Project" target="_blank"
         >GitHub</a
       >.
