--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
-    <link rel="stylesheet" href="css/style.css" />
     <title>World Clock Project</title>
   </head>
   <body>
@@ -16,22 +16,22 @@
         <option value="">Select a City...</option>
         <option value="">London</option>
         <option value="">New York</option>
-        <option value="">Tokyo</option>
+        <option value="">Astana</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
           <h2>Los Angeles</h2>
-          <div class="date">April 27th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">5:49 <small>PM</small></div>
+        <div class="time"></div>
       </div>
-      <div class="city">
+      <div class="city" id="tokyo">
         <div>
           <h2>Tokyo</h2>
-          <div class="date">April 27th 2024</div>
+          <div class="date"></div>
         </div>
-        <div class="time">5:49 <small>PM</small></div>
+        <div class="time"></div>
       </div>
     </div>
 
