--- a/index.html
+++ b/index.html
@@ -12,29 +12,30 @@
     <div class="container">
       <h1>World Clock</h1>
 
-      <select name="" id="">
+      <select id="city">
         <option value="">Select a City...</option>
-        <option value="">London</option>
-        <option value="">New York</option>
-        <option value="">Astana</option>
+        <option value="Europe/London">London</option>
+        <option value="America/New_York">New York</option>
+        <option value="Asia/Almaty">Almaty</option>
       </select>
 
-      <div class="city" id="los-angeles">
-        <div>
-          <h2>Los Angeles</h2>
-          <div class="date"></div>
+      <div id="cities">
+        <div class="city" id="los-angeles">
+          <div>
+            <h2>Los Angeles</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
-      </div>
-      <div class="city" id="tokyo">
-        <div>
-          <h2>Tokyo</h2>
-          <div class="date"></div>
+        <div class="city" id="tokyo">
+          <div>
+            <h2>Tokyo</h2>
+            <div class="date"></div>
+          </div>
+          <div class="time"></div>
         </div>
-        <div class="time"></div>
       </div>
     </div>
-
     <footer>
       Coded by <strong>Olessya Oporta</strong> & is open-sourced on
       <a href="https://github.com/OlessyaOG/World-Clock-Project" target="_blank"
