--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Hina+Mincho&family=Lobster&family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.37/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>World Clock Project</title>
   </head>
   <body>
     <div class="container">
-      <h1>
-       World Clock
-      </h1>
+      <h1>World Clock</h1>
 
       <select id="city">
-        <option value="">Select a City...</option>
+        <option value="" id="selection">Select a City...</option>
         <option value="current">My current location</option>
         <option value="Europe/London">London</option>
         <option value="America/New_York">New York</option>
@@ -41,7 +46,13 @@
       </div>
     </div>
     <footer>
-      Coded by <strong>Olessya Oporta</strong> & is open-sourced on
+      Coded by
+      <a
+        href="https://www.shecodes.io/graduates/102115-olessya-oporta"
+        target="_blank"
+        >Olessya Oporta</a
+      >
+      & is open-sourced on
       <a href="https://github.com/OlessyaOG/World-Clock-Project" target="_blank"
         >GitHub</a
       >.
